--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.15",
     "sass": "^1.55.0",
-    "typescript": "^2.7.2",
+    "typescript": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },"proxy": "http://127.0.0.1:8000/api/v1"
 }
